tests/compile_fail/state/wrong_state_enum.stderr
error: implementations of moku::State in this module must use only BlinkyState as the generic
  --> tests/compile_fail/state/wrong_state_enum.rs:21:5
   |
21 |     #[superstate(Top)]
   |     ^
